src/assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Oswald|Raleway&display=swap');

body {
	font-family: 'Raleway', sans-serif;
	font-size: 14px;
}

p {
	font-size: 1.1rem;
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Oswald', sans-serif;
}

h1 {
	font-size: 3rem;
}

h2 {
	font-size: 2.5rem;
}

h3 {
	font-size: 2.2rem;
}

h4 {
	font-size: 1.8rem;
}

h5 {
	font-size: 1.5rem;	
}

h6 {
	font-size: 1.3rem;
}

.main-page-wrapper {
	padding: unset;
}

.colored-title {
	color: #ff6e40;
}

.info-text {
	font-size: 1rem;
	font-style: italic;
}

.ananda_logo a {
	text-decoration: none;
    color: #fff;
    font-weight: bold;
    font-size: 1.5rem;
}

.home_wrapper {
	height: 100vh;
	color: #fff;
	background: url('../images/ray-rui-QzmA1qSqTwA-unsplash.jpg') center no-repeat;
	background-size: cover;
}

.shadow {
	width: 100%;
	height: 100vh;
	background: rgba(0,0,0,0.4)
}

.intro-wrapper {
	position: absolute;
	top: 25%;
	padding:0 100px 0 100px;
}

.toolbar {
	position: fixed;
	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
	background: #ff6e40;
    padding: 10px;
    margin: unset;
    width: 100%;
    z-index: 100;
    color: #fff;
}

.toolbar a {
	color: #fff;
}

.center-title {
	text-align: center;
}

.center-content {
	text-align: center;
}

.viz-area {
	position: relative;
	margin-top: 50px;
}

.map-wrapper {
	position: fixed;
}

.region-chart-wrapper, .chart-wrapper {
	margin-top: 50px;
}

.parent-ministry-wrapper {
	background-color: #f2f2f2;
	position: fixed;
	height: 100%;
	padding-top: 17px;
}

.parent-ministry-wrapper .tooltip {
	position: unset;
}

.ministry_wrapper {
	text-align: center;
	position: relative;
}

.ministry_wrapper svg {
	width: 150px;
	height: 150px;
}

.ministry_wrapper svg circle, .svg-wrapper svg circle {
	cursor: pointer;
}

.year-selector {
	text-align: center;
}

.right-menus, .mobile-right-menus {
	float: right;
}

.mobile-right-menus {
	display:none;
}

.mobile-right-menus a {
	color: #ff6e40;
}

.fin-year-selector {
	padding: 10px;
}

.svg-wrapper {
	padding: 20px;
}

.center-chart svg {
	margin: 0 auto;
    display: block;
}

.apexcharts-canvas {
	margin: auto;
}

.tooltip {
	background-color: #000;
	color: #fff;
	border-radius: 3px;
	padding: 5px 10px;
	position: absolute;
	text-align: center;
	opacity: 0;
	z-index: -999;
}

.photo-credit {
	position: absolute;
    bottom: 20px;
    right: 30px;
}

/* Media Query */

/* Phones */
@media (max-width: 480px) {
	.intro-wrapper {
		padding: 50px 30px 0 30px;
		top: unset;
	}
	.right-menus {
		display:none;
	}

	.mobile-right-menus {
		display: inline-block;
	}

	.mdl-layout--large-screen-only {
		display: none;
	}

}

